# newsfeed

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: reflection.md
src/api/: main.py
src/api/routers/: __init__.py  ingest.py  retrieve.py
src/filtering/: __init__.py  filter_orchestration.py
src/filters/: __init__.py  keyword_filter.py  semantic_filter.py
src/ingestion/: __init__.py  background_ingestion.py
src/models/: __init__.py  api.py  news_item.py
src/registry/: __init__.py  filter_registry.py  interfaces.py  source_registry.py
src/sources/: __init__.py  mock_source.py  reddit_source.py  rss_source.py
src/storage/: __init__.py  in_memory.py  interface.py
src/ui/: __init__.py  dashboard.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_api.py  test_api_contract.py  test_filtering_pipeline.py  test_ingest_endpoint.py  test_ingest_retrieve_workflow.py  test_retrieve_endpoint.py  test_sources_pipeline.py
tests/unit/: test_api_models.py  test_filter_orchestration.py  test_mock_source.py  test_news_item.py  test_reddit_source.py  test_registry.py  test_rss_source.py  test_storage.py
