[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IT-newsfeed"
version = "0.1.0"
description = "Real-time IT newsfeed system"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",             # Web framework for APIs
    "uvicorn[standard]>=0.24.0",    # ASGI server (Asynchronous Server Gateway Interface)
    "pydantic>=2.0",                # Data validation
    "sentence-transformers>=2.2.0", # AI/ML for filtering
    "numpy>=1.24.0",                # Numerical computing for semantic similarity
    "feedparser>=6.0.0",            # RSS feeds
    "praw>=7.7.0",                  # Reddit API
    "httpx>=0.25.0",                # HTTP client
    "streamlit>=1.28.0",            # UI dashboard
    "loguru>=0.7.0",                # Structured logging
    "pytest>=7.4.0",                # Testing
    "pytest-cov>=4.1.0",            # Coverage reporting
    "pytest-asyncio>=1.0.0",        # Async testing support
    "psutil>=5.9.0",                # System monitoring for memory tests
    "isort>=6.0.0",                 # Import sorting
    "black>=25.0.0",                # Code formatting
    "flake8>=7.0.0",                # Linting
]

# Package discovery configuration
[tool.setuptools.packages.find]
where = ["src"]

# Package directory mapping
[tool.setuptools.package-dir]
"" = "src"

# Explicit Black configuration for clarity and future-proofing
[tool.black]
line-length = 88
target-version = ['py312']

# Use the Black profile for isort to ensure compatibility with Black's formatting
[tool.isort]
profile = "black"

# Configure flake8 to work with black and isort
# Note: Also configured in .flake8 file for better flake8 compatibility
[tool.flake8]
max-line-length = 88                               # Match black's default
extend-ignore = ["E203", "W503"]                   # Ignore conflicts with black
exclude = [".git", "__pycache__", "venv", ".venv"]

# Optional: Pytest configuration for coverage and test discovery
[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
